--- a/src/Mvc.Grid.Web/Views/Javascript/ReloadEvents.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/ReloadEvents.cshtml
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="widget-content">
-        @Html.Partial("_ReloadEventsGrid")
+        @await Html.PartialAsync("_ReloadEventsGrid")
     </div>
 </div>
 
