--- a/src/Mvc.Grid.Web/Views/Grid/SourceUrl.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/SourceUrl.cshtml
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="widget-content">
-        @Html.Partial("_SourceUrlGrid")
+        @await Html.PartialAsync("_SourceUrlGrid")
     </div>
 </div>
 
