--- a/src/Mvc.Grid.Web/Views/Javascript/RequestType.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/RequestType.cshtml
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="widget-content">
-        @Html.Partial("_ReloadGrid")
+        @await Html.PartialAsync("_ReloadGrid")
     </div>
 </div>
 
