--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -28,6 +28,10 @@ body {
         line-height: 2;
     }
 
+.install-note {
+    background: rgba(204, 255, 201, 0.35);
+}
+
 .sidebar-search {
     background: rgba(255, 255, 255, 0.7);
     margin-bottom: 20px;
