--- a/Mvc.Grid.Web/Views/Column/FilterOptions.cshtml
+++ b/Mvc.Grid.Web/Views/Column/FilterOptions.cshtml
@@ -26,7 +26,7 @@
                 columns.Add(model => model.Surname);
                 columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age);
+                columns.Add(model => model.Age).WithFilterOptions();
                 columns.Add(model => model.Birthday).Formatted("{0:d}");
                 columns.Add(model => model.IsWorking);
             })
@@ -67,7 +67,7 @@
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
-        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
+        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>).WithFilterOptions();
         columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
